--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li>julia </li>
             <li>anne</li>
             <li>Thomas</li>
+            <li>David</li>
         </ol>
         <b>This is Bold Text</b>
         
